src/app/main/settings/settings.component.scss
.flex-style {
  display: flex;
  height: 100vh;
  width: 100vw;
  flex-direction: row;
}
.flex-style-short {
  display: flex;
  height: 100vh;
  width: 100vw;
  flex-direction: row;
}
.settings-row {
  flex-grow: 1;
  width: 100vw;
}


.background-col{

  background-color: white;
}


.settings-icon{
   padding-right: 6px;
}
.right-arrow-icon {
  float: right;
  padding-top: 5px;
  padding-right: 25px;
}
.heading{
  cursor: pointer;
  font-size: 16px;
  font-family: Roboto;
}
.heading:hover {
  background-color: #0000000A;
}
.placeholder{
  font-size: 16px;
  font-family: Roboto;
}
.password-change-input{
  width: 60%;
}
.confirm-password-change-input{
  width: 95%;
}
.username-change-input{
  width: 60%;
}
.toggle-style{
  background-color: #2a3b3d;
  width: 10px;
}


.mat-form-field-underline{
  color: #2a3b3d;
}
.save-btn{
  font-size: 14px;
  font-family: Roboto;
  width: 78px;
  color: white;
  background-color: #2a3b3d;
  text-align: center;
  justify-content: center;
  margin: 16px 0;
}
.loading-btn{
  font-size: 14px;
  font-family: Roboto;
  color: white;
  background-color: #2a3b3d;
  text-align: center;
  justify-content: center;
  margin: 16px 0;
}


.push-email-notification{
  font-size: 16px;
  font-family: Roboto;
  padding-bottom: 24px;

}
.push-email-right-space{
  padding-left: 44%;
}
.push-email-right-space-with-save{
  padding-left: 6%;
}
.save-push-email{
  font-size: 14px;
  padding-left: 28%;
}
.notification-subheading{
  font-size: 16px;
  font-weight: bold;
  font-family: Roboto;
  padding-top: 24px;
}
.below-col-container{
  padding-left: 16px;
  padding-top: 36px;
}
.each-div{
  padding-bottom: 28px;
}
.success-msg{
  color: green;
  font-size: 12px;
}

.not-success-msg{
  color: red;
  font-size: 12px;
}



@media only screen and (min-width: 781px){
  .flex-style {
    display: flex;
    height: 80vh;
    width: 40vw;
    flex-direction: row;
  }
  .flex-style-short {
    display: flex;
    height: 35vh;
    width: 40vw;
    flex-direction: row;
  }
  .right-arrow-icon {
    padding-right: 15px;

  }
  .settings-icon{
    padding-right: 13px;
  }
  .settings-row{
     flex-grow: 1;
    width: 60%;
    padding-left: 60px;
    padding-top: 24px;
  }
  .below-col-container{
    padding-left: 24px;
    padding-top: 24px;
  }
  .save-btn{
    width: 90px;
  }
  .password-change-input{
    width: 100%;
  }

}
@media only screen and (max-width: 370px){
  .push-email-right-space {
    padding-left: 34%;
  }
  .push-email-right-space-with-save {
    padding-left: 2.5%;
  }
  .email-with-save{
    padding-left: 2.7%;
  }
  .save-push-email{
    padding-left: 18%;
  }
}
@media only screen and (min-width: 371px) and (max-width: 380px) {

  .push-email-right-space {
    padding-left: 44%;
  }
  .push-email-right-space-with-save {
    padding-left: 4.5%;
  }
  .email-with-save {
    padding-left: 4.5%;
  }
  .save-push-email{
    padding-left: 28%;
  }
}
@media only screen and (min-width: 381px) and (max-width: 425px) {
  .push-email-right-space {
    padding-left: 44%;
  }
  .push-email-right-space-with-save {
    padding-left: 4%;
  }
  .email-with-save {
    padding-left: 3.9%;
  }
  .save-push-email{
    padding-left: 30%;
  }
}


@media only screen and (min-width: 426px) and (max-width: 768px) {
  .push-email-right-space {
    padding-left: 44%;
  }
  .push-email-right-space-with-save {
    padding-left: 4.5%;
  }
  .email-with-save{
    padding-left: 4.5%;
  }
  .save-push-email{
    padding-left: 34%;
  }
  .right-arrow-icon {
    padding-right: 60px;
  }
}
@media only screen and (min-width: 769px) and (max-width: 1279px){
  .push-email-right-space {
    padding-left: 40%;
  }
  .push-email-right-space-with-save {
    padding-left: 3.5%;
  }
  .email-with-save{
    padding-left: 3.2%;
  }
  .save-push-email{
    padding-left: 24%;
  }
}
@media only screen and (min-width: 1280px){
  .push-email-right-space {
    padding-left: 60%;
  }
  .push-email-right-space-with-save {
    padding-left: 4.5%;
  }
  .email-with-save{
    padding-left: 4.5%;
  }
  .save-push-email{
    padding-left: 47%;
  }
}
@media only screen and (width: 1366px) {

  .push-email-right-space {
    padding-left: 60%;
  }
  .push-email-right-space-with-save {
    padding-left: 4.1%;
  }
  .email-with-save{
    padding-left: 4.2%;
  }
  .save-push-email{
    padding-left: 47%;
  }
}

@media only screen and (min-width: 1500px){
  .push-email-right-space {
    padding-left: 69%;
  }
  .push-email-right-space-with-save {
    padding-left: 4.6%;
  }
  .email-with-save{
    padding-left: 4.6%;
  }
  .save-push-email{
    padding-left: 60%;
  }
}

